# dkm

./: .gitignore
include/: dkm.hpp  dkm_parallel.hpp  dkm_utils.hpp
src/test/: CMakeLists.txt
